@@ -23,15 +23,19 @@
 # released with the generic branch version due to the final wildcard below,
 # and once released its version cannot be changed.
 
+# public symbols added in 2.8.10 (please keep in alphabetical order):
+@WX_VERSION_TAG@.10 {
+        *wxDCBase*GetFontPointSizeAdjustment*;
+};
 
 # public symbols added in 2.8.9 (please keep in alphabetical order):
-# public symbols added in 2.8.8 (please keep in alphabetical order):
 @WX_VERSION_TAG@.9 {
         *wxAuiTabCtrl*OnCaptureLost*;
         *wxAuiToolBar*;
         *wxWindow*UnsetToolTip*;
 };
 
+# public symbols added in 2.8.8 (please keep in alphabetical order):
 @WX_VERSION_TAG@.8 {
     global:
         *TimeZone*Make*;
